# project_GNA

./: .gitignore  CMakeLists.txt  README.md
include/: AlgorithmDispatcher.hpp  BenchmarkMode.hpp  GraphEdge.hpp  ParamtersUtils.hpp  SingleFileMode.hpp
include/algorithms/: BellmanFord.hpp  Dijkstra.hpp  FordFulkerson.hpp  Kruskal.hpp  Prim.hpp
include/data/: GraphGenerator.hpp  GraphParser.hpp
include/representation/: IncidenceMatrix.hpp  SuccessorList.hpp
include/structures/: DynamicArray.hpp  MinHeap.hpp  SingleList.hpp
src/: main.cpp
